Feat: Criando meus agentes assistente

--- a/ai_assistente.ipynb
+++ b/ai_assistente.ipynb
@@ -198,6 +198,162 @@
    "source": [
     "retriver_tickets = load_excel_vectorstore(\"Tickets.xlsx\", \"vectorstore_tickets\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d86f81",
+   "metadata": {},
+   "source": [
+    "Criando os agentes assistentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "703ecbe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict, Optional, List\n",
+    "from langchain_core.messages import BaseMessage, SystemMessage, HumanMessage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "2d8be920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class State(TypedDict, total=False):\n",
+    "    query: str\n",
+    "    route: Optional[str]\n",
+    "    anwser: Optional[str]\n",
+    "    chat_history: Optional[List[BaseMessage]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "e4cfa636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_with_retriever(state: State, papel: str, prompt_instrucoes: str, retriver = None):\n",
+    "    query = state['query']\n",
+    "    chat_history = state.get('chat_history', [])\n",
+    "    contexto = \"\"\n",
+    "\n",
+    "    if retriver:\n",
+    "        recuperados = retriver.get_relevant_documents(query)\n",
+    "        if recuperados:\n",
+    "            contexto = '\\n'.join([d.page_content for d in recuperados])\n",
+    "\n",
+    "    mensagens = [\n",
+    "        SystemMessage(content=(\n",
+    "                f\"Você é um {papel}. \"\n",
+    "                f\"Suas instruções:\\n{prompt_instrucoes}\\n\\n\"\n",
+    "                f\"- Use sempre o contexto recuperado para responder à ÚLTIMA pergunta do usuário.\\n\"\n",
+    "                f\"- Use o histórico da conversa para entender o contexto geral e perguntas de acompanhamento.\\n\"\n",
+    "                f\"- Se não houver informações relevantes no contexto, diga que não encontrou dados suficientes para responder.\\n\"\n",
+    "                f\"- Evite inventar informações.\"\n",
+    "            )),\n",
+    "            *chat_history,\n",
+    "            HumanMessage(content=(\n",
+    "                f\"Pergunta do usuário:\\n{query}\\n\\n\"\n",
+    "                f\"Contexto disponível para esta pergunta:\\n{contexto if contexto else '[Nenhum contexto encontrado]'}\"\n",
+    "            ))\n",
+    "    ]\n",
+    "\n",
+    "    resposta = llm.invoke(mensagens)\n",
+    "    state['anwser'] = resposta.content\n",
+    "\n",
+    "    return state\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d21dcc66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_detalhe_tecnico(state: State):\n",
+    "    prompt_instrucoes = (\n",
+    "        \"Seja um **especialista em suporte técnico e produto**. \"\n",
+    "        \"Você deve responder a perguntas sobre **especificações técnicas**, \"\n",
+    "        \"**instruções de instalação**, **manutenção preventiva** e **solução de problemas**. \"\n",
+    "        \"Sua resposta deve ser precisa, técnica e objetiva, baseada estritamente no manual técnico. \"\n",
+    "        \"Para problemas, ofereça uma solução clara e passo a passo.\"\n",
+    "    )\n",
+    "    return agent_with_retriever(\n",
+    "        state, \"especialista em detalhes técnicos\", prompt_instrucoes, retriver_manual_tecnico\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a2a323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_perguntas_e_respostas(state: State):\n",
+    "    prompt_instrucoes = (\n",
+    "        \"Seja um **especialista em Perguntas Frequentes (FAQ)**. \"\n",
+    "        \"Sua função é fornecer respostas diretas e concisas a perguntas comuns. \"\n",
+    "        \"Responda como se estivesse consultando uma base de conhecimento, mantendo a resposta factual e sem rodeios. \"\n",
+    "        \"Se a pergunta se referir a um problema, ofereça a resposta e, se necessário, sugira o contato com o suporte técnico para casos complexos.\"\n",
+    "    )\n",
+    "    return agent_with_retriever(\n",
+    "        state, \"especialista em FAQs\", prompt_instrucoes, retriver_perguntas_frequentes\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea5ad52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_politicas_e_procedimentos(state: State):\n",
+    "    prompt_instrucoes = (\n",
+    "        \"Seja um **especialista em políticas e procedimentos da empresa**. \"\n",
+    "        \"Sua tarefa é responder a perguntas sobre **garantia**, **horário de atendimento**, \"\n",
+    "        \"**prazos de SLA** e **regras internas de suporte**. \"\n",
+    "        \"Sua resposta deve ser formal e baseada nos documentos oficiais, garantindo que o cliente entenda as regras e os processos da empresa.\"\n",
+    "    )\n",
+    "    return agent_with_retriever(\n",
+    "        state, \"especialista em políticas e procedimentos\", prompt_instrucoes, retriver_politicas_procedimentos\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57ef62dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_tickets(state: State):\n",
+    "    prompt_instrucoes = (\n",
+    "        \"Seja um **especialista em tickets de atendimento**. \"\n",
+    "        \"Você deve fornecer informações precisas sobre o **status e detalhes de um chamado existente**. \"\n",
+    "        \"Sua resposta deve ser direta, baseada nos dados do ticket (Ticket ID, Status, Responsável, Descrição do Problema). \"\n",
+    "        \"Se o usuário perguntar sobre um ticket específico, forneça as informações relevantes e mantenha a resposta curta e direta.\"\n",
+    "    )\n",
+    "    return agent_with_retriever(\n",
+    "        state, \"especialista em tickets de atendimento\", prompt_instrucoes, retriver_tickets\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdb6407b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
