Feat: Criando o agente supervisor

--- a/ai_assistente.ipynb
+++ b/ai_assistente.ipynb
@@ -350,6 +350,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1033613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def supervisor(state: State):\n",
+    "    query = state['query']\n",
+    "    chat_history = state.get('chat_history', [])\n",
+    "\n",
+    "    mensagens = [SystemMessage(content=(\n",
+    "            \"\"\"Você é um assistente virtual de atendimento ao cliente da **Industech**, uma empresa especializada em produtos industriais.\n",
+    "\n",
+    "            Sua principal responsabilidade é atuar como um supervisor, **roteando as perguntas dos clientes para o agente especialista mais adequado**.\n",
+    "\n",
+    "            Sua única função é analisar a pergunta do usuário e retornar **uma palavra-chave** que representa o agente responsável. Se a pergunta não se encaixar em nenhuma categoria de especialista, ou se for uma saudação ou uma pergunta sobre suas próprias capacidades, você deve responder de forma amigável diretamente ao cliente, sem rotear.\n",
+    "\n",
+    "            A sua resposta deve ser:\n",
+    "            - **Uma frase de resposta direta**, caso a pergunta seja geral (ex: \"Olá\", \"Tudo bem?\", \"O que você faz?\").\n",
+    "            - **Uma das seguintes palavras-chave**, em minúsculas e sem pontuação, para roteamento:\n",
+    "            - **detalhe_tecnico**: para perguntas sobre **especificações técnicas**, **manuais de produtos** ou **solução de problemas**.\n",
+    "            - **perguntas_e_respostas**: para **dúvidas operacionais comuns** ou **FAQs**.\n",
+    "            - **politicas_e_procedimentos**: para questões sobre **políticas da empresa**, **garantia** ou **prazos de atendimento (SLA)**.\n",
+    "            - **tickets**: para perguntas sobre o **status de um chamado**.\n",
+    "\n",
+    "            **Regras:**\n",
+    "            - Responda apenas com a frase ou com a palavra-chave.\n",
+    "            - Não adicione explicações, comentários ou qualquer outro texto.\n",
+    "            - Não invente novas categorias.\"\"\"\n",
+    "        )),\n",
+    "        *chat_history,\n",
+    "        HumanMessage(content=query)]\n",
+    "    \n",
+    "    resposta = llm.invoke(mensagens)\n",
+    "    resposta_limpa = resposta.content.strip().lower()\n",
+    "\n",
+    "    # Verifica se a resposta é uma das rotas ou se é uma resposta direta\n",
+    "    if resposta_limpa in [\"detalhe_tecnico\", \"perguntas_e_respostas\", \"politicas_e_procedimentos\", \"tickets\"]:\n",
+    "        state[\"route\"] = resposta_limpa\n",
+    "    else:\n",
+    "        state[\"answer\"] = resposta.content # Salva a resposta direta na chave 'answer'\n",
+    "\n",
+    "    return state"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cdb6407b",
    "metadata": {},
