--- a/ai_assistente.ipynb
+++ b/ai_assistente.ipynb
@@ -10,21 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "260a6008",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from dotenv import load_dotenv\n",
@@ -63,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "'Albert Einstein (1879-1955) foi um físico teórico alemão que desenvolveu a teoria da relatividade, um dos dois pilares da física moderna (o outro é a mecânica quântica).  Sua famosa equação, E=mc², que estabelece a equivalência entre energia e massa, é uma das mais conhecidas do mundo.\\n\\nAlém da relatividade, Einstein fez contribuições significativas em outras áreas da física, incluindo a mecânica estatística (explicação do movimento browniano), a cosmologia e a mecânica quântica (embora tivesse reservas sobre alguns de seus aspectos).  Ele recebeu o Prêmio Nobel de Física de 1921 por sua explicação do efeito fotoelétrico, que ajudou a estabelecer a teoria quântica da luz.\\n\\nEinstein é considerado um dos maiores e mais influentes cientistas de todos os tempos, não apenas por suas descobertas científicas, mas também por seu impacto na filosofia e na cultura popular. Sua imagem icônica, com o cabelo despenteado e a língua para fora, é mundialmente reconhecida. Ele também era conhecido por seu pacifismo e seu envolvimento em causas sociais e políticas.'"
+       "'Albert Einstein (1879-1955) foi um físico teórico alemão que desenvolveu a teoria da relatividade, um dos dois pilares da física moderna (o outro é a mecânica quântica).  Sua famosa equação, E=mc², que postula a equivalência entre energia e massa, é uma das equações mais conhecidas do mundo.\\n\\nAlém da relatividade, Einstein fez contribuições significativas em outros campos da física, incluindo a mecânica estatística (explicação do movimento browniano) e a cosmologia (teoria de um universo em expansão).  Ele recebeu o Prêmio Nobel de Física em 1921 por sua explicação do efeito fotoelétrico, que foi crucial para o desenvolvimento da mecânica quântica.\\n\\nEinstein não foi apenas um gênio científico, mas também uma figura pública altamente influente.  Suas ideias revolucionaram a compreensão do universo e sua imagem icônica se tornou sinônimo de inteligência e genialidade.  Ele também foi um pacifista declarado e um defensor do sionismo.  Sua vida e obra continuam a inspirar e a ser objeto de estudo até os dias de hoje.'"
       ]
      },
      "execution_count": 3,
@@ -85,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "977aa48a",
    "metadata": {},
    "outputs": [],
@@ -126,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\degio\\AppData\\Local\\Temp\\ipykernel_21656\\323160131.py:1: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\degio\\AppData\\Local\\Temp\\ipykernel_23520\\323160131.py:1: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embedding = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
       "c:\\Users\\degio\\Downloads\\2025\\Preditiva\\Formação AI\\Conteudos\\Módulo 8 - Projetos Finais\\CASE 1\\Assistente_AI\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "aea710d5",
    "metadata": {},
    "outputs": [],
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "e70d57a7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "16ec4d57",
    "metadata": {},
    "outputs": [],
@@ -191,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "a5125dda",
    "metadata": {},
    "outputs": [],
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "703ecbe7",
    "metadata": {},
    "outputs": [],
@@ -220,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "2d8be920",
    "metadata": {},
    "outputs": [],
@@ -234,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "e4cfa636",
    "metadata": {},
    "outputs": [],
@@ -274,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "d21dcc66",
    "metadata": {},
    "outputs": [],
@@ -294,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f4a2a323",
    "metadata": {},
    "outputs": [],
@@ -313,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eea5ad52",
    "metadata": {},
    "outputs": [],
@@ -332,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "57ef62dc",
    "metadata": {},
    "outputs": [],
@@ -351,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c1033613",
    "metadata": {},
    "outputs": [],
@@ -393,6 +382,97 @@
     "        state[\"answer\"] = resposta.content # Salva a resposta direta na chave 'answer'\n",
     "\n",
     "    return state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fba6c09",
+   "metadata": {},
+   "source": [
+    "Workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4efdbb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, START, END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7d3ff5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para decidir o próximo passo\n",
+    "def decide_action(state: State):\n",
+    "    # Se a resposta já foi gerada pelo supervisor, encerra o fluxo.\n",
+    "    if \"answer\" in state:\n",
+    "        return \"end_workflow\" \n",
+    "    else:\n",
+    "        # Caso contrário, usa a rota para ir para o agente especialista.\n",
+    "        return state[\"route\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1a363011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_workflow():\n",
+    "    workflow = StateGraph(State)\n",
+    "\n",
+    "    # Adicionar os nos\n",
+    "    workflow.add_node('supervisor_node', supervisor)\n",
+    "    workflow.add_node(\"detalhe_tecnico_node\", agent_detalhe_tecnico)\n",
+    "    workflow.add_node(\"perguntas_e_respostas_node\", agent_perguntas_e_respostas)\n",
+    "    workflow.add_node(\"politicas_e_procedimentos_node\", agent_politicas_e_procedimentos)\n",
+    "    workflow.add_node(\"tickets_node\", agent_tickets)\n",
+    "\n",
+    "    # Adicione um nó de saída para a resposta direta\n",
+    "    workflow.add_node(\"end_workflow\", lambda x: x)\n",
+    "\n",
+    "    # Definir o nó inicial\n",
+    "    workflow.add_edge(START, 'supervisor_node')\n",
+    "\n",
+    "    # Adicione o roteamento condicional\n",
+    "    workflow.add_conditional_edges(\n",
+    "        \"supervisor_node\",\n",
+    "        decide_action,\n",
+    "        {\n",
+    "            \"detalhe_tecnico\": \"detalhe_tecnico_node\",\n",
+    "            \"perguntas_e_respostas\": \"perguntas_e_respostas_node\",\n",
+    "            \"politicas_e_procedimentos\": \"politicas_e_procedimentos_node\",\n",
+    "            \"tickets\": \"tickets_node\",\n",
+    "            \"end_workflow\": END # Termina o fluxo se a resposta já foi gerada pelo supervisor\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    # Defina as saídas dos agentes especialistas\n",
+    "    workflow.add_edge(\"detalhe_tecnico_node\", END)\n",
+    "    workflow.add_edge(\"perguntas_e_respostas_node\", END)\n",
+    "    workflow.add_edge(\"politicas_e_procedimentos_node\", END)\n",
+    "    workflow.add_edge(\"tickets_node\", END)\n",
+    "\n",
+    "    \n",
+    "    return workflow.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7c231c89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = build_workflow()"
    ]
   },
   {
