Feat: Formatando o codigo, checando qualidade e adicionando um README

--- a/ai_assistente.ipynb
+++ b/ai_assistente.ipynb
@@ -40,7 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatGoogleGenerativeAI(model = 'gemini-1.5-flash', google_api_key=os.getenv(\"GOOGLE_API_KEY\"))"
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-1.5-flash\", google_api_key=os.getenv(\"GOOGLE_API_KEY\")\n",
+    ")"
    ]
   },
   {
@@ -61,7 +63,7 @@
     }
    ],
    "source": [
-    "llm.invoke('Quem foi Albert Einstein?').content"
+    "llm.invoke(\"Quem foi Albert Einstein?\").content"
    ]
   },
   {
@@ -133,16 +135,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_pdf_vectorstore(filepath : str, save_path: str):\n",
+    "def load_pdf_vectorstore(filepath: str, save_path: str):\n",
     "    loader = PyPDFLoader(DOCS_DIR / filepath)\n",
     "    documents = loader.load()\n",
     "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=500)\n",
     "    documents = text_splitter.split_documents(documents)\n",
     "    vectorstore = FAISS.from_documents(documents, embedding)\n",
-    "    vectorstore.save_local(f'vectorstores/{save_path}')\n",
-    "    retriver = vectorstore.as_retriever(search_type = 'similarity', search_kwargs = {'k':7})\n",
-    "    return retriver\n",
-    "    "
+    "    vectorstore.save_local(f\"vectorstores/{save_path}\")\n",
+    "    retriver = vectorstore.as_retriever(\n",
+    "        search_type=\"similarity\", search_kwargs={\"k\": 7}\n",
+    "    )\n",
+    "    return retriver"
    ]
   },
   {
@@ -152,9 +155,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriver_perguntas_frequentes = load_pdf_vectorstore(\"Perguntas Frequentes.pdf\", \"vectorstore_perguntas_frequentes\")\n",
-    "retriver_manual_tecnico = load_pdf_vectorstore(\"Manual Tecnico de Produtos.pdf\", \"vectorstore_manual_tecnico_produtos\")\n",
-    "retriver_politicas_procedimentos = load_pdf_vectorstore(\"Politicas e Procedimentos.pdf\", \"vectorstore_politicas_procedimentos\")"
+    "retriver_perguntas_frequentes = load_pdf_vectorstore(\n",
+    "    \"Perguntas Frequentes.pdf\", \"vectorstore_perguntas_frequentes\"\n",
+    ")\n",
+    "retriver_manual_tecnico = load_pdf_vectorstore(\n",
+    "    \"Manual Tecnico de Produtos.pdf\", \"vectorstore_manual_tecnico_produtos\"\n",
+    ")\n",
+    "retriver_politicas_procedimentos = load_pdf_vectorstore(\n",
+    "    \"Politicas e Procedimentos.pdf\", \"vectorstore_politicas_procedimentos\"\n",
+    ")"
    ]
   },
   {
@@ -164,16 +173,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_excel_vectorstore(filepath : str, save_path: str):\n",
+    "def load_excel_vectorstore(filepath: str, save_path: str):\n",
     "    df = pd.read_excel(DOCS_DIR / filepath)\n",
     "    documents = []\n",
     "    for idx, row in df.iterrows():\n",
-    "        text = ' '.join([str(cell) for cell in row if pd.notna(cell)])\n",
-    "        documents.append(Document(page_content = text, metadata ={'row': idx}))\n",
+    "        text = \" \".join([str(cell) for cell in row if pd.notna(cell)])\n",
+    "        documents.append(Document(page_content=text, metadata={\"row\": idx}))\n",
     "\n",
     "    vectorstore_tickers = FAISS.from_documents(documents, embedding)\n",
-    "    vectorstore_tickers.save_local('vectorstores/vectorstore_tickets')\n",
-    "    retriver_tickets = vectorstore_tickers.as_retriever(search_type = 'similarity', search_kwargs = {'k':7})\n",
+    "    vectorstore_tickers.save_local(\"vectorstores/vectorstore_tickets\")\n",
+    "    retriver_tickets = vectorstore_tickers.as_retriever(\n",
+    "        search_type=\"similarity\", search_kwargs={\"k\": 7}\n",
+    "    )\n",
     "\n",
     "    return retriver_tickets"
    ]
@@ -218,7 +229,7 @@
     "    query: str\n",
     "    route: Optional[str]\n",
     "    anwser: Optional[str]\n",
-    "    chat_history: Optional[List[BaseMessage]]\n"
+    "    chat_history: Optional[List[BaseMessage]]"
    ]
   },
   {
@@ -228,37 +239,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def agent_with_retriever(state: State, papel: str, prompt_instrucoes: str, retriver = None):\n",
-    "    query = state['query']\n",
-    "    chat_history = state.get('chat_history', [])\n",
+    "def agent_with_retriever(\n",
+    "    state: State, papel: str, prompt_instrucoes: str, retriver=None\n",
+    "):\n",
+    "    query = state[\"query\"]\n",
+    "    chat_history = state.get(\"chat_history\", [])\n",
     "    contexto = \"\"\n",
     "\n",
     "    if retriver:\n",
     "        recuperados = retriver.get_relevant_documents(query)\n",
     "        if recuperados:\n",
-    "            contexto = '\\n'.join([d.page_content for d in recuperados])\n",
+    "            contexto = \"\\n\".join([d.page_content for d in recuperados])\n",
     "\n",
     "    mensagens = [\n",
-    "        SystemMessage(content=(\n",
+    "        SystemMessage(\n",
+    "            content=(\n",
     "                f\"Você é um {papel}. \"\n",
     "                f\"Suas instruções:\\n{prompt_instrucoes}\\n\\n\"\n",
     "                f\"- Use sempre o contexto recuperado para responder à ÚLTIMA pergunta do usuário.\\n\"\n",
     "                f\"- Use o histórico da conversa para entender o contexto geral e perguntas de acompanhamento.\\n\"\n",
     "                f\"- Se não houver informações relevantes no contexto, diga que não encontrou dados suficientes para responder.\\n\"\n",
     "                f\"- Evite inventar informações.\"\n",
-    "            )),\n",
-    "            *chat_history,\n",
-    "            HumanMessage(content=(\n",
+    "            )\n",
+    "        ),\n",
+    "        *chat_history,\n",
+    "        HumanMessage(\n",
+    "            content=(\n",
     "                f\"Pergunta do usuário:\\n{query}\\n\\n\"\n",
     "                f\"Contexto disponível para esta pergunta:\\n{contexto if contexto else '[Nenhum contexto encontrado]'}\"\n",
-    "            ))\n",
+    "            )\n",
+    "        ),\n",
     "    ]\n",
     "\n",
     "    resposta = llm.invoke(mensagens)\n",
-    "    state['anwser'] = resposta.content\n",
+    "    state[\"anwser\"] = resposta.content\n",
     "\n",
-    "    return state\n",
-    "\n"
+    "    return state"
    ]
   },
   {
@@ -277,8 +293,11 @@
     "        \"Para problemas, ofereça uma solução clara e passo a passo.\"\n",
     "    )\n",
     "    return agent_with_retriever(\n",
-    "        state, \"especialista em detalhes técnicos\", prompt_instrucoes, retriver_manual_tecnico\n",
-    "    )\n"
+    "        state,\n",
+    "        \"especialista em detalhes técnicos\",\n",
+    "        prompt_instrucoes,\n",
+    "        retriver_manual_tecnico,\n",
+    "    )"
    ]
   },
   {
@@ -297,7 +316,7 @@
     "    )\n",
     "    return agent_with_retriever(\n",
     "        state, \"especialista em FAQs\", prompt_instrucoes, retriver_perguntas_frequentes\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -315,8 +334,11 @@
     "        \"Sua resposta deve ser formal e baseada nos documentos oficiais, garantindo que o cliente entenda as regras e os processos da empresa.\"\n",
     "    )\n",
     "    return agent_with_retriever(\n",
-    "        state, \"especialista em políticas e procedimentos\", prompt_instrucoes, retriver_politicas_procedimentos\n",
-    "    )\n"
+    "        state,\n",
+    "        \"especialista em políticas e procedimentos\",\n",
+    "        prompt_instrucoes,\n",
+    "        retriver_politicas_procedimentos,\n",
+    "    )"
    ]
   },
   {
@@ -334,7 +356,10 @@
     "        \"Se o usuário perguntar sobre um ticket específico, forneça as informações relevantes e mantenha a resposta curta e direta.\"\n",
     "    )\n",
     "    return agent_with_retriever(\n",
-    "        state, \"especialista em tickets de atendimento\", prompt_instrucoes, retriver_tickets\n",
+    "        state,\n",
+    "        \"especialista em tickets de atendimento\",\n",
+    "        prompt_instrucoes,\n",
+    "        retriver_tickets,\n",
     "    )"
    ]
   },
@@ -346,11 +371,13 @@
    "outputs": [],
    "source": [
     "def supervisor(state: State):\n",
-    "    query = state['query']\n",
-    "    chat_history = state.get('chat_history', [])\n",
+    "    query = state[\"query\"]\n",
+    "    chat_history = state.get(\"chat_history\", [])\n",
     "\n",
-    "    mensagens = [SystemMessage(content=(\n",
-    "            \"\"\"Você é um assistente virtual de atendimento ao cliente da **Industech**, uma empresa especializada em produtos industriais.\n",
+    "    mensagens = [\n",
+    "        SystemMessage(\n",
+    "            content=(\n",
+    "                \"\"\"Você é um assistente virtual de atendimento ao cliente da **Industech**, uma empresa especializada em produtos industriais.\n",
     "\n",
     "            Sua principal responsabilidade é atuar como um supervisor, **roteando as perguntas dos clientes para o agente especialista mais adequado**.\n",
     "\n",
@@ -368,18 +395,25 @@
     "            - Responda apenas com a frase ou com a palavra-chave.\n",
     "            - Não adicione explicações, comentários ou qualquer outro texto.\n",
     "            - Não invente novas categorias.\"\"\"\n",
-    "        )),\n",
+    "            )\n",
+    "        ),\n",
     "        *chat_history,\n",
-    "        HumanMessage(content=query)]\n",
-    "    \n",
+    "        HumanMessage(content=query),\n",
+    "    ]\n",
+    "\n",
     "    resposta = llm.invoke(mensagens)\n",
     "    resposta_limpa = resposta.content.strip().lower()\n",
     "\n",
     "    # Verifica se a resposta é uma das rotas ou se é uma resposta direta\n",
-    "    if resposta_limpa in [\"detalhe_tecnico\", \"perguntas_e_respostas\", \"politicas_e_procedimentos\", \"tickets\"]:\n",
+    "    if resposta_limpa in [\n",
+    "        \"detalhe_tecnico\",\n",
+    "        \"perguntas_e_respostas\",\n",
+    "        \"politicas_e_procedimentos\",\n",
+    "        \"tickets\",\n",
+    "    ]:\n",
     "        state[\"route\"] = resposta_limpa\n",
     "    else:\n",
-    "        state[\"answer\"] = resposta.content # Salva a resposta direta na chave 'answer'\n",
+    "        state[\"answer\"] = resposta.content  # Salva a resposta direta na chave 'answer'\n",
     "\n",
     "    return state"
    ]
@@ -413,7 +447,7 @@
     "def decide_action(state: State):\n",
     "    # Se a resposta já foi gerada pelo supervisor, encerra o fluxo.\n",
     "    if \"answer\" in state:\n",
-    "        return \"end_workflow\" \n",
+    "        return \"end_workflow\"\n",
     "    else:\n",
     "        # Caso contrário, usa a rota para ir para o agente especialista.\n",
     "        return state[\"route\"]"
@@ -430,7 +464,7 @@
     "    workflow = StateGraph(State)\n",
     "\n",
     "    # Adicionar os nos\n",
-    "    workflow.add_node('supervisor_node', supervisor)\n",
+    "    workflow.add_node(\"supervisor_node\", supervisor)\n",
     "    workflow.add_node(\"detalhe_tecnico_node\", agent_detalhe_tecnico)\n",
     "    workflow.add_node(\"perguntas_e_respostas_node\", agent_perguntas_e_respostas)\n",
     "    workflow.add_node(\"politicas_e_procedimentos_node\", agent_politicas_e_procedimentos)\n",
@@ -440,7 +474,7 @@
     "    workflow.add_node(\"end_workflow\", lambda x: x)\n",
     "\n",
     "    # Definir o nó inicial\n",
-    "    workflow.add_edge(START, 'supervisor_node')\n",
+    "    workflow.add_edge(START, \"supervisor_node\")\n",
     "\n",
     "    # Adicione o roteamento condicional\n",
     "    workflow.add_conditional_edges(\n",
@@ -451,8 +485,8 @@
     "            \"perguntas_e_respostas\": \"perguntas_e_respostas_node\",\n",
     "            \"politicas_e_procedimentos\": \"politicas_e_procedimentos_node\",\n",
     "            \"tickets\": \"tickets_node\",\n",
-    "            \"end_workflow\": END # Termina o fluxo se a resposta já foi gerada pelo supervisor\n",
-    "        }\n",
+    "            \"end_workflow\": END,  # Termina o fluxo se a resposta já foi gerada pelo supervisor\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    # Defina as saídas dos agentes especialistas\n",
@@ -461,7 +495,6 @@
     "    workflow.add_edge(\"politicas_e_procedimentos_node\", END)\n",
     "    workflow.add_edge(\"tickets_node\", END)\n",
     "\n",
-    "    \n",
     "    return workflow.compile()"
    ]
   },
